@@ -2,7 +2,7 @@
 # Kernel/Modules/AgentTicketPrint.pm - print layout for agent interface
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketPrint.pm,v 1.52 2008-05-08 09:58:00 mh Exp $
+# $Id: AgentTicketPrint.pm,v 1.53 2008-06-20 16:29:38 mh Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -19,7 +19,7 @@ use Kernel::System::LinkObject;
 use Kernel::System::PDF;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.52 $) [1];
+$VERSION = qw($Revision: 1.53 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -73,11 +73,18 @@ sub Run {
     }
 
     # get linked objects
-    my %Links = $Self->{LinkObject}->AllLinkedObjects(
-        Object   => 'Ticket',
-        ObjectID => $Self->{TicketID},
+    my $LinkList = $Self->LinkList(
+        Object => 'Ticket',
+        Key    => $Self->{TicketID},
+        State  => 'Valid',
         UserID   => $Self->{UserID},
     );
+
+#    my %Links = $Self->{LinkObject}->AllLinkedObjects(
+#        Object   => 'Ticket',
+#        ObjectID => $Self->{TicketID},
+#        UserID   => $Self->{UserID},
+#    );
 
     # get content
     my %Ticket = $Self->{TicketObject}->TicketGet( TicketID => $Self->{TicketID} );
@@ -218,7 +225,7 @@ sub Run {
         # output linked objects
         $Self->_PDFOutputLinkedObjects(
             PageData => \%Page,
-            LinkData => \%Links,
+            LinkData => $LinkList,
         );
 
         # output customer infos
@@ -260,7 +267,7 @@ sub Run {
         $Output .= $Self->{LayoutObject}->PrintHeader( Value => $Ticket{TicketNumber} );
 
         # output linked objects
-        for my $LinkType ( sort keys %Links ) {
+        for my $LinkType ( sort keys %{$LinkList} ) {
             my %ObjectType = %{ $Links{$LinkType} };
             for my $Object ( sort keys %ObjectType ) {
                 my %Data = %{ $ObjectType{$Object} };
@@ -505,108 +512,110 @@ sub _PDFOutputLinkedObjects {
             return;
         }
     }
-    my %Links = %{ $Param{LinkData} };
+
     my %Page  = %{ $Param{PageData} };
-    my $LONormal;
-    my $LOParent;
-    my $LOChild;
 
-    # generate strings
-    for my $LinkType ( sort keys %Links ) {
-        my %ObjectType = %{ $Links{$LinkType} };
-        for my $Object ( sort keys %ObjectType ) {
-            my %Data = %{ $ObjectType{$Object} };
-            for my $Item ( sort keys %Data ) {
-                if ( $LinkType eq 'Normal' ) {
-                    $LONormal .= $Data{$Item}{Text} . ' ';
-                }
-                elsif ( $LinkType eq 'Parent' ) {
-                    $LOParent .= $Data{$Item}{Text} . ' ';
-                }
-                elsif ( $LinkType eq 'Child' ) {
-                    $LOChild .= $Data{$Item}{Text} . ' ';
-                }
-            }
-        }
-    }
+#    my $LONormal;
+#    my $LOParent;
+#    my $LOChild;
+#
+#    # generate strings
+#    for my $LinkType ( sort keys %{ $Param{LinkData} } ) {
+#        my %ObjectType = %{ $Links{$LinkType} };
+#        for my $Object ( sort keys %ObjectType ) {
+#            my %Data = %{ $ObjectType{$Object} };
+#            for my $Item ( sort keys %Data ) {
+#                if ( $LinkType eq 'Normal' ) {
+#                    $LONormal .= $Data{$Item}{Text} . ' ';
+#                }
+#                elsif ( $LinkType eq 'Parent' ) {
+#                    $LOParent .= $Data{$Item}{Text} . ' ';
+#                }
+#                elsif ( $LinkType eq 'Child' ) {
+#                    $LOChild .= $Data{$Item}{Text} . ' ';
+#                }
+#            }
+#        }
+#    }
+#
+#    # output linked objects
+#    if ( $LONormal || $LOParent || $LOChild ) {
+#        my %TableParam;
+#        my $Row = 0;
+#        if ($LONormal) {
+#            $TableParam{CellData}[$Row][0]{Content}
+#                = $Self->{LayoutObject}->{LanguageObject}->Get('Normal') . ':';
+#            $TableParam{CellData}[$Row][0]{Font}    = 'ProportionalBold';
+#            $TableParam{CellData}[$Row][1]{Content} = $LONormal;
+#            $Row++;
+#        }
+#        if ($LOParent) {
+#            $TableParam{CellData}[$Row][0]{Content}
+#                = $Self->{LayoutObject}->{LanguageObject}->Get('Parent') . ':';
+#            $TableParam{CellData}[$Row][0]{Font}    = 'ProportionalBold';
+#            $TableParam{CellData}[$Row][1]{Content} = $LOParent;
+#            $Row++;
+#        }
+#        if ($LOChild) {
+#            $TableParam{CellData}[$Row][0]{Content}
+#                = $Self->{LayoutObject}->{LanguageObject}->Get('Child') . ':';
+#            $TableParam{CellData}[$Row][0]{Font}    = 'ProportionalBold';
+#            $TableParam{CellData}[$Row][1]{Content} = $LOChild;
+#            $Row++;
+#        }
+#        $TableParam{ColumnData}[0]{Width} = 80;
+#        $TableParam{ColumnData}[1]{Width} = 431;
+#
+#        # set new position
+#        $Self->{PDFObject}->PositionSet(
+#            Move => 'relativ',
+#            Y    => -15,
+#        );
+#
+#        # output headline
+#        $Self->{PDFObject}->Text(
+#            Text     => $Self->{LayoutObject}->{LanguageObject}->Get('Linked Objects'),
+#            Height   => 7,
+#            Type     => 'Cut',
+#            Font     => 'ProportionalBoldItalic',
+#            FontSize => 7,
+#            Color    => '#666666',
+#        );
+#
+#        # set new position
+#        $Self->{PDFObject}->PositionSet(
+#            Move => 'relativ',
+#            Y    => -4,
+#        );
+#
+#        # table params
+#        $TableParam{Type}            = 'Cut';
+#        $TableParam{Border}          = 0;
+#        $TableParam{FontSize}        = 6;
+#        $TableParam{BackgroundColor} = '#DDDDDD';
+#        $TableParam{Padding}         = 1;
+#        $TableParam{PaddingTop}      = 3;
+#        $TableParam{PaddingBottom}   = 3;
+#
+#        # output table
+#        for ( $Page{PageCount} .. $Page{MaxPages} ) {
+#
+#            # output table (or a fragment of it)
+#            %TableParam = $Self->{PDFObject}->Table( %TableParam, );
+#
+#            # stop output or output next page
+#            if ( $TableParam{State} ) {
+#                last;
+#            }
+#            else {
+#                $Self->{PDFObject}->PageNew(
+#                    %Page, FooterRight => $Page{PageText} . ' ' . $Page{PageCount},
+#                );
+#                $Page{PageCount}++;
+#            }
+#        }
+#    }
 
-    # output linked objects
-    if ( $LONormal || $LOParent || $LOChild ) {
-        my %TableParam;
-        my $Row = 0;
-        if ($LONormal) {
-            $TableParam{CellData}[$Row][0]{Content}
-                = $Self->{LayoutObject}->{LanguageObject}->Get('Normal') . ':';
-            $TableParam{CellData}[$Row][0]{Font}    = 'ProportionalBold';
-            $TableParam{CellData}[$Row][1]{Content} = $LONormal;
-            $Row++;
-        }
-        if ($LOParent) {
-            $TableParam{CellData}[$Row][0]{Content}
-                = $Self->{LayoutObject}->{LanguageObject}->Get('Parent') . ':';
-            $TableParam{CellData}[$Row][0]{Font}    = 'ProportionalBold';
-            $TableParam{CellData}[$Row][1]{Content} = $LOParent;
-            $Row++;
-        }
-        if ($LOChild) {
-            $TableParam{CellData}[$Row][0]{Content}
-                = $Self->{LayoutObject}->{LanguageObject}->Get('Child') . ':';
-            $TableParam{CellData}[$Row][0]{Font}    = 'ProportionalBold';
-            $TableParam{CellData}[$Row][1]{Content} = $LOChild;
-            $Row++;
-        }
-        $TableParam{ColumnData}[0]{Width} = 80;
-        $TableParam{ColumnData}[1]{Width} = 431;
-
-        # set new position
-        $Self->{PDFObject}->PositionSet(
-            Move => 'relativ',
-            Y    => -15,
-        );
-
-        # output headline
-        $Self->{PDFObject}->Text(
-            Text     => $Self->{LayoutObject}->{LanguageObject}->Get('Linked Objects'),
-            Height   => 7,
-            Type     => 'Cut',
-            Font     => 'ProportionalBoldItalic',
-            FontSize => 7,
-            Color    => '#666666',
-        );
-
-        # set new position
-        $Self->{PDFObject}->PositionSet(
-            Move => 'relativ',
-            Y    => -4,
-        );
-
-        # table params
-        $TableParam{Type}            = 'Cut';
-        $TableParam{Border}          = 0;
-        $TableParam{FontSize}        = 6;
-        $TableParam{BackgroundColor} = '#DDDDDD';
-        $TableParam{Padding}         = 1;
-        $TableParam{PaddingTop}      = 3;
-        $TableParam{PaddingBottom}   = 3;
-
-        # output table
-        for ( $Page{PageCount} .. $Page{MaxPages} ) {
-
-            # output table (or a fragment of it)
-            %TableParam = $Self->{PDFObject}->Table( %TableParam, );
-
-            # stop output or output next page
-            if ( $TableParam{State} ) {
-                last;
-            }
-            else {
-                $Self->{PDFObject}->PageNew(
-                    %Page, FooterRight => $Page{PageText} . ' ' . $Page{PageCount},
-                );
-                $Page{PageCount}++;
-            }
-        }
-    }
     return 1;
 }
 
