@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.669 2008-06-19 22:21:42 martin Exp $
+# $Id: CHANGES,v 1.670 2008-06-20 16:29:38 mh Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,7 @@
 # --
 
 2.3.0 beta3 (2008/06/??)
+ - (2008/06/20) Removed output of linked objects in customer ticket print.
  - (2008/06/19) Fixed bug# 2998 - Highlighted selection for notification
     listbox in admin interface.
  - (2008/06/19) Fixed bug# 3005 - AJAX functionality is not working in phone
